service shutdown fix